test/data/semantic-errors/invalid-list-expression-for-a-existing-type.jen
type iExist : error | number

butMyTypeDoesntExist = [ok, ok, ok, err, '1']
